<resources>
    <string name="app_name">Agent Cash Collection App</string>
    <string name="agent_username_key">Agent Username Key</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin_pic">Admin Pic</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="let_s_start">Let\'s Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>