<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminSignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/admin_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/admin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        app:boxStrokeColor="@color/ui_color"
        app:hintTextColor="@color/textColor"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.05">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="14"
            android:inputType="text"
            android:textCursorDrawable="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/ui_color"
        app:hintTextColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints=""
            android:textCursorDrawable="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        app:boxStrokeColor="@color/ui_color"
        app:hintTextColor="@color/textColor"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.45">

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/ui_color"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>